--- a/code_irrigation_efficiency.Rmd
+++ b/code_irrigation_efficiency.Rmd
@@ -84,7 +84,7 @@ checkpoint("2021-08-02",
 
 ```{r datasets, cache=TRUE}
 
-# READ IN DATA ---------------------------------------------------------------------
+# READ IN DATA -------------------------------------------------------------------
 
 # Rohwer data
 rohwer <- fread("rohwer_data_all.csv")
@@ -133,7 +133,7 @@ bos.rohwer.mf.all <- rbind(bos.rohwer.mf.ec, bos.rohwer.mf.ed)
 
 ```{r plot_rohwer, cache=TRUE, dependson="datasets"}
 
-# PLOT -----------------------------------------------------------------------------
+# PLOT ---------------------------------------------------------------------------
 
 bos2 <- copy(bos)
 bos2 <- setnames(bos2, c("E_a", "E_c", "E_d"), c("E[a]", "E[c]", "E[d]"))
@@ -182,7 +182,7 @@ bottom
 
 ```{r plot_usa_africa, cache=TRUE, dependson="datasets", fig.width=3.5}
 
-# PLOT USA AND AFRICA --------------------------------------------------------------
+# PLOT USA AND AFRICA ------------------------------------------------------------
 
 c1 <- ggplot(usa.dt, aes(Efficiency)) +
   geom_histogram() +
@@ -203,7 +203,7 @@ top
 
 ```{r plot_merge_rohwer, cache=TRUE, dependson=c("plot_rohwer", "plot_usa_africa"), fig.width=3, fig.height=5, dev = "pdf"}
 
-# PLOT MERGED ----------------------------------------------------------------------
+# PLOT MERGED --------------------------------------------------------------------
 
 plot_grid(top, bottom, ncol = 1, rel_heights = c(0.3, 0.7))
 ```
@@ -214,7 +214,7 @@ plot_grid(top, bottom, ncol = 1, rel_heights = c(0.3, 0.7))
 
 ```{r matrix_fun, cache=TRUE}
 
-# CREATE FUNCTION TO DESIGN SAMPLE MATRIX ----------------------------------------
+# CREATE FUNCTION TO DESIGN SAMPLE MATRIX ---------------------------------------
 
 params_algo <- list(
   "Surface" = c("Ea_surf", "Ec_surf", "m", "r_L", "X1", "X2"),
@@ -243,7 +243,7 @@ sample_matrix_fun <- function(IFT) {
 
 ```{r truncated_distr, cache=TRUE}
 
-# DEFINE TRUNCATED DISTRIBUTIONS -------------------------------------------------
+# DEFINE TRUNCATED DISTRIBUTIONS ------------------------------------------------
 
 # EA SURFACE ---------
 
@@ -291,7 +291,7 @@ beta_dist.m <- sapply(c(minimum.m, maximum.m), function(x)
 
 ```{r distributions_func, cache=TRUE}
 
-# FUNCTION TO TRANSFORM TO APPROPRIATE DISTRIBUTIONS -----------------------------
+# FUNCTION TO TRANSFORM TO APPROPRIATE DISTRIBUTIONS ----------------------------
 
 distributions_fun <- list(
 
@@ -359,7 +359,7 @@ distributions_fun <- list(
 
 ```{r unc_large_fraction, cache=TRUE, dependson="datasets"}
 
-# DEFINE THE UNCERTAINTY IN THE LARGE FRACTION AT THE COUNTRY LEVEL --------------
+# DEFINE THE UNCERTAINTY IN THE LARGE FRACTION AT THE COUNTRY LEVEL -------------
 
 eff10 <- fread("efficiency_10.csv")
 eff30 <- fread("efficiency_30.csv")
@@ -493,7 +493,7 @@ full_model <- function(IFT, Country, sample.size, R) {
 
 ```{r settings, cache=TRUE }
 
-# DEFINE SETTINGS -----------------------------------------------------------------
+# DEFINE SETTINGS ----------------------------------------------------------------
 
 N <- 2^14
 R <- 10^2
@@ -504,7 +504,7 @@ list_continents <- list(c("Africa", "Asia"), c("Americas", "Europe"))
 
 ```{r run_model, cache=TRUE, dependson=c("distr_final", "unc_large_fraction", "distributions_func", "truncated_distr", "matrix_fun", "full_model", "settings")}
 
-# RUN MODEL -----------------------------------------------------------------------
+# RUN MODEL ----------------------------------------------------------------------
 
 new.rohwer <- rohwer[Country %in% jager$Country][, IFT:= "Jager"]
 all.dt <- list(rohwer, new.rohwer)
@@ -524,7 +524,7 @@ for(j in 1:length(all.dt)) {
 
 ```{r extract_output, cache=TRUE, dependson="run_model"}
 
-# EXTRACT MODEL OUTPUT ------------------------------------------------------------
+# EXTRACT MODEL OUTPUT -----------------------------------------------------------
 
 names(y) <- c("Rohwer et al. 2007", "Jägermeyr et al. 2015")
 
@@ -568,7 +568,7 @@ uncertainty.dt <- uncertainty.dt[, Study:= ifelse(IFT == "Jager",
 
 ```{r export_uncertainty, cache=TRUE, dependson="extract_output"}
 
-# EXPORT UNCERTAINTY IN IRRIGATION EFFICIENCY -------------------------------------
+# EXPORT UNCERTAINTY IN IRRIGATION EFFICIENCY ------------------------------------
 
 fwrite(uncertainty.dt, "uncertainty.dt.csv")
 ```
@@ -579,7 +579,7 @@ fwrite(uncertainty.dt, "uncertainty.dt.csv")
 
 ```{r cv_irrigation, cache=TRUE, dependson="extract_output", fig.height=6.4, fig.width=5.2, message=FALSE, warning=FALSE}
 
-# CALCULATE COEFFICIENT OF VARIATION ----------------------------------------------
+# CALCULATE COEFFICIENT OF VARIATION ---------------------------------------------
 
 cv.dt <- uncertainty.dt[, .(sd = sd(V1), mean = mean(V1)), 
                         .(Country, Approach, Continent)] %>%
@@ -611,7 +611,7 @@ dd
 
 ```{r plot_ranges, cache=TRUE, dependson="extract_output", fig.height=2.5, fig.width=2.5}
 
-# COMPUTE RANGES ------------------------------------------------------------------
+# COMPUTE RANGES -----------------------------------------------------------------
 
 calc <- uncertainty.dt[, .(min = min(V1), max = max(V1)), .(Continent, Country)] %>%
   .[, .(range = max - min), .(Continent, Country)] %>%
@@ -627,7 +627,7 @@ ggplot(calc, aes(range)) +
 
 ```{r plot_ranges2, cache=TRUE, dependson=c("plot_ranges", "extract_output"), fig.height=1.5, fig.width=5.6, dev = "pdf"}
 
-# COMPARE RANGES ------------------------------------------------------------------
+# COMPARE RANGES -----------------------------------------------------------------
 
 ranges_empirical <- uncertainty.dt[, .(higher = max(V1), lower = min(V1)), IFT] %>%
   .[, Study:= "This study"]%>%
@@ -657,7 +657,7 @@ rbind(ranges_empirical, ranges_efficiencies)[, mean.value:= (higher + lower) / 2
 
 ```{r check_overlap, cache=TRUE, dependson="extract_output", fig.height=6.4, fig.width=5.2}
 
-# CHECK OVERLAP -------------------------------------------------------------------
+# CHECK OVERLAP ------------------------------------------------------------------
 
 dd <- uncertainty.dt[!Continent == "Oceania"][Study == "Rohwer et al. approach"] %>%
   split(., .$Continent, drop = TRUE)
@@ -703,7 +703,7 @@ dd
 
 ```{r plot_overlap_histogram, cache=TRUE, dependson="check_overlap", fig.height=2.5, fig.width=3.5, message=FALSE, warning=FALSE}
 
-# PLOT OVERLAP AS HISTOGRAMS AND BOXPLOTS  ----------------------------------------
+# PLOT OVERLAP AS HISTOGRAMS AND BOXPLOTS  ---------------------------------------
 
 ggplot(ff, aes(V1)) +
   geom_histogram() +
@@ -721,7 +721,7 @@ ggplot(ff, aes(Continent, V1)) +
 
 ```{r correspondence_ift, cache=TRUE, dependson="check_overlap"}
 
-# CHECK CORRESPONDENCE BETWEEN SHARES OF IFT AND PREDOMINANT TECHNOLOGY -----------
+# CHECK CORRESPONDENCE BETWEEN SHARES OF IFT AND PREDOMINANT TECHNOLOGY ----------
 
 # Retrieve countries where overlap is <0.3
 merge(jager, rohwer, by = c("Country")) %>%
@@ -731,7 +731,7 @@ merge(jager, rohwer, by = c("Country")) %>%
 
 ```{r unc_analysis, cache=TRUE, dependson="extract_output"}
 
-# PLOT UNCERTAINTY ----------------------------------------------------------------
+# PLOT UNCERTAINTY ---------------------------------------------------------------
 
 gg <- list()
 for (i in 1:length(list_continents)) {
@@ -751,14 +751,14 @@ for (i in 1:length(list_continents)) {
 
 ```{r merge_plot_unc, cache=TRUE, dependson="unc_analysis", fig.height=6.4, fig.width=5.2, dev = "pdf"}
 
-# MERGE PLOTS ---------------------------------------------------------------------
+# MERGE PLOTS --------------------------------------------------------------------
 
 gg
 ```
 
 ```{r unc_analysis2, cache=TRUE, dependson="extract_output", fig.height=6.4, fig.width=5.2}
 
-# PLOT UNCERTAINTY IN EACH IRRIGATION TECHNOLOGY ----------------------------------
+# PLOT UNCERTAINTY IN EACH IRRIGATION TECHNOLOGY ---------------------------------
 
 gg <- list()
 
@@ -790,7 +790,7 @@ gg
 
 ```{r plot_rohwer_points, cache=TRUE, dependson="datasets", fig.height=6, fig.width=5.2}
 
-# PLOT ROHWER ET AL.'S IRRIGATION EFFICIENCY VALUES -------------------------------
+# PLOT ROHWER ET AL.'S IRRIGATION EFFICIENCY VALUES ------------------------------
 
 rohwer[, Continent:= countrycode(rohwer[, Country], origin = "country.name",
                                  destination = "continent")]
@@ -814,7 +814,7 @@ dd
 
 ```{r define_factor_unc, cache=TRUE, dependson="extract_output", fig.height=1.5, fig.width=5.6}
 
-# CALCULATE THE UNCERTAINTY IN THE RANGES -----------------------------------------
+# CALCULATE THE UNCERTAINTY IN THE RANGES ----------------------------------------
 
 selection_continents <- c("Africa", "Asia", "Americas", "Europe")
 
@@ -841,7 +841,7 @@ factor_unc %>%
 
 ```{r functions_isimip, cache=TRUE}
 
-# FUNCTIONS TO EXTRACT DATA FROM .NC FILES ----------------------------------------
+# FUNCTIONS TO EXTRACT DATA FROM .NC FILES ---------------------------------------
 
 coords2country = function(points) {
   countriesSP <- rworldmap::getMap(resolution = 'low')
@@ -897,7 +897,7 @@ open_nc_files <- function(file, dname, selected.years, vec) {
 
 ```{r read_nc, cache=TRUE, dependson="functions_isimip"}
 
-# READ IN NC FILES ----------------------------------------------------------------
+# READ IN NC FILES ---------------------------------------------------------------
 
 # Define settings
 vecs <- 1:((2010 - 1970) * 12)
@@ -920,7 +920,7 @@ isimip.dt <- mclapply(files, function(x)
 
 ```{r corrective_lpjml, cache=TRUE}
 
-# EXTRACT CORRECTIVE COEFFICIENTS FOR IRRIGATION EFFICIENCY FOR LPJML -------------
+# EXTRACT CORRECTIVE COEFFICIENTS FOR IRRIGATION EFFICIENCY FOR LPJML ------------
 
 ncin <- nc_open("irrigation_project_efficiencies.nc")
 lon <- ncvar_get(ncin, "lon")
@@ -939,7 +939,7 @@ lpjml_efficiencies <- cbind(Country, da) %>%
 
 ```{r arrange_nc, cache=TRUE, dependson=c("read_nc", "corrective_lpjml")}
 
-# ARRANGE NC FILES ----------------------------------------------------------------
+# ARRANGE NC FILES ---------------------------------------------------------------
 
 names(isimip.dt) <- names.isimip
 
@@ -960,28 +960,33 @@ fwrite(isimip.dt, "isimip.dt")
 
 ```{r merge_isimip_data, cache.lazy = FALSE, dependson=c("arrange_nc", "extract_output")}
 
-# MERGE UNCERTAINTY IN EP WITH ISIMIP DATA ----------------------------------------
+# MERGE UNCERTAINTY IN EP WITH ISIMIP DATA ---------------------------------------
 
 efficiency.dt <- copy(uncertainty.dt) %>%
   setnames(., "V1", "Ep")
 
-ghm.dt <- dcast(isimip.dt, Country + Continent + Code ~ Model, value.var = "Water.Withdrawn")
-full.dt <- merge(efficiency.dt, ghm.dt, by = c("Country", "Continent"), all.x = TRUE) %>%
-  .[, (names.isimip):= lapply(.SD, function(x) x / Ep), .SDcols = names.isimip]
-tmp.dt <- melt(full.dt, measure.vars = names.isimip, variable.name = "Model",
-               value.name = "IWW_corrected")
-ghm.large <- melt(ghm.dt, measure.vars = names.isimip, variable.name = "Model",
-     value.name = "IWW")
-gm.uncertainty <- tmp.dt[, .(min = min(IWW_corrected), max = max(IWW_corrected)), 
-                         .(Country, Continent, Model)]
-gm.dt <- merge(ghm.large, gm.uncertainty)
+isimip.quantiles <- isimip.dt[, .(quantile.low = quantile(Water.Withdrawn, 
+                                                          prob = 0.025, na.rm = TRUE),
+                                  quantile.high = quantile(Water.Withdrawn, 
+                                                           prob = 0.975, na.rm = TRUE)),
+                              .(Continent, Country)] %>%
+  .[, Approach:= "GMs"]
+
+isimip.dt.unc.efficiencies <- merge(efficiency.dt, isimip.dt, 
+                                    by = c("Country", "Continent"), all.x = TRUE,
+                                    allow.cartesian = TRUE) %>%
+  .[, Water.Withdrawn:= Water.Withdrawn / Ep] %>%
+  .[, .(quantile.low = quantile(Water.Withdrawn, prob = 0.025, na.rm = TRUE),
+    quantile.high = quantile(Water.Withdrawn, prob = 0.975, na.rm = TRUE)),
+    .(Continent, Country)] %>%
+  .[, Approach:= "GMs + uncertainty in irrigation efficiency"]
 ```
 
 ## Retrieve data from ISIMIP (climate change in 2050)
 
 ```{r climate_uncertainties, cache=TRUE}
 
-# READ IN FILES ON CLIMATE CHANGE UNCERTAINTY (2050) ------------------------------
+# READ IN FILES ON CLIMATE CHANGE UNCERTAINTY (2050) -----------------------------
 
 files <- list(
   "watergap2_miroc5_ewembi_rcp85_2005soc_co2_pirrww_global_monthly_2006_2099.nc",
@@ -1014,7 +1019,7 @@ isimip.climate <- mclapply(
 
 ```{r climate_uncertainties_arrange, cache=TRUE, dependson="climate_uncertainties"}
 
-# ARRANGE DATASETS ----------------------------------------------------------------
+# ARRANGE DATASETS ---------------------------------------------------------------
 
 ghms <- c(rep("WaterGap", times = 4), 
           rep("LPJmL", times = 3), 
@@ -1041,36 +1046,34 @@ isimip.climate.dt <- lapply(isimip.climate, function(x) rbindlist(x, idcol = "Ye
 
 # Export
 fwrite(isimip.climate.dt, "isimip.climate.dt.csv")
+
+# Check global IWW estimates per scenario and model
+isimip.climate.dt[, .(total = sum(Water.Withdrawn, na.rm = TRUE)), 
+                  .(Model, `Climate scenario`)]
 ```
 
 ```{r plot_unc_comparison, cache=TRUE, dependson=c("merge_isimip_data", "climate_uncertainties_arrange"), dev = "pdf", fig.height=4.2, fig.width=4.5}
 
 # PLOT RANGES OF STRUCTURAL UNCERTAINTY AND RANGES OF 
 # STRUCTURAL UNCERTAINTY + UNCERTAINTY IN IRRIGATION EFFICIENCY +
-# UNCERTAINTY IN CLIMATE CHANGE ---------------------------------------------------
+# UNCERTAINTY IN CLIMATE CHANGE --------------------------------------------------
 
-countries_list <- c("Egypt", "Sudan", "South Africa", "Morocco", "Madagascar", 
-                    "United States", "Mexico", "Brazil", "Chile", "Peru", 
-                    "India", "China", "Pakistan", "Iran", "Indonesia", 
+countries_list <- c("Egypt", "Sudan", "South Africa", "Morocco", "Madagascar",
+                    "United States", "Mexico", "Brazil", "Chile", "Peru",
+                    "India", "China", "Pakistan", "Iran", "Indonesia",
                     "Italy", "Spain", "France", "Ukraine", "Romania")
 
-range.gm <- gm.dt %>%
-  .[, .(min = min(IWW, na.rm = TRUE), max = max(IWW, na.rm = TRUE)), 
-    .(Country, Continent)] %>%
-  .[, Approach:= "GM"]
+isimip.climate <- isimip.climate.dt[, .(quantile.low = quantile(Water.Withdrawn, prob = 0.025, na.rm = TRUE),
+                                        quantile.high = quantile(Water.Withdrawn, prob = 0.975, na.rm = TRUE)),
+                                    .(Continent, Country)] %>%
+  .[, Approach:= "GMs + uncertainty in climate change"]
 
-range.study <- gm.dt %>%
-  .[, .(min = min(min, na.rm = TRUE), max = max(max, na.rm = TRUE)), 
-    .(Country, Continent)] %>%
-  .[, Approach:= "GM + uncertainty in irrigation efficiency"]
+all.uncertainties <- rbind(isimip.quantiles,
+                           isimip.dt.unc.efficiencies,
+                           isimip.climate) %>%
+  .[, mean:= (quantile.low + quantile.high) / 2] %>%
+  na.omit()
 
-range.climate <- isimip.climate.dt %>%
-  .[, .(min = min(Water.Withdrawn), max = max(Water.Withdrawn)), 
-    .(Country, Continent)] %>%
-  .[, Approach:= "GM + uncertainty in climate change"]
-
-all.uncertainties <- rbind(range.gm, range.study, range.climate) %>%
-  .[, mean:= (min + max) / 2]
 
 # Substitute 0 by NA ----------------------------
 all.uncertainties[all.uncertainties == 0] <- NA
@@ -1078,8 +1081,8 @@ all.uncertainties[all.uncertainties == 0] <- NA
 all.uncertainties %>%
   .[Country %in% countries_list] %>%
   ggplot(., aes(reorder(Country, mean), mean, color = Approach)) +
-  geom_errorbar(aes(ymin = min,
-                    ymax = max),
+  geom_errorbar(aes(ymin = quantile.high,
+                    ymax = quantile.low),
                 position = position_dodge(0.7)) +
   scale_y_log10(breaks = trans_breaks("log10", function(x) 10 ^ (2 * x)),
                 labels = trans_format("log10", math_format(10 ^ .x))) +
@@ -1098,11 +1101,11 @@ fwrite(all.uncertainties, "all.uncertainties.csv")
 ```{r plot_unc_comparison_complete, cache=TRUE, dependson=c("merge_isimip_data", "plot_unc_merge"), fig.height=7, fig.width=5.2, dev = "pdf", message=FALSE, warning=FALSE}
 
 # PLOT RANGES OF STRUCTURAL UNCERTAINTY AND RANGES OF 
-# STRUCTURAL UNCERTAINTY + UNCERTAINTY IN IRRIGATION EFFICIENCY (COMPLETE) --------
+# STRUCTURAL UNCERTAINTY + UNCERTAINTY IN IRRIGATION EFFICIENCY (COMPLETE) -------
 
-vec1 <- all.uncertainties[Approach == "GM", Country]
-vec2 <- all.uncertainties[Approach == "GM + uncertainty in climate change", Country]
-vec3 <- all.uncertainties[Approach == "GM + uncertainty in irrigation efficiency", Country]
+vec1 <- all.uncertainties[Approach == "GMs", Country]
+vec2 <- all.uncertainties[Approach == "GMs + uncertainty in climate change", Country]
+vec3 <- all.uncertainties[Approach == "GMs + uncertainty in irrigation efficiency", Country]
 common_countries <- Reduce(intersect, list(vec1, vec2, vec3))
 
 dd <- list()
@@ -1112,8 +1115,8 @@ for (i in 1:length(list_continents)) {
     na.omit() %>%
     .[Continent %in% list_continents[[i]]] %>%
     ggplot(., aes(reorder(Country, mean), mean, color = Approach)) +
-    geom_errorbar(aes(ymin = min,
-                      ymax = max),
+    geom_errorbar(aes(ymin = quantile.high,
+                      ymax = quantile.low),
                   position = position_dodge(0.7)) +
     scale_y_log10(breaks = trans_breaks("log10", function(x) 10 ^ (2 * x)),
                   labels = trans_format("log10", math_format(10 ^ .x))) +
@@ -1131,25 +1134,46 @@ dd
 
 ```{r print_ranges, cache=TRUE, dependson="plot_unc_comparison", fig.height=2.5, fig.width=2.7}
 
-# COMPARE RANGES ------------------------------------------------------------------
+# COMPARE RANGES -----------------------------------------------------------------
 
-all.uncertainties <- all.uncertainties[, range:= max - min]
+all.uncertainties <- all.uncertainties[, range:= quantile.high - quantile.low]
 
-dd <- melt(all.uncertainties, measure.vars = c("min", "max")) %>%
-  dcast(., Country + Continent + variable ~ Approach, value.var = "value") %>%
-  .[variable == "max"] %>%
+# Number of countries with larger uncertainties in irrigation efficiencies than climate change
+# Number of countries with higher values in irrigation efficiency than climate change
+measures <- c("range", "quantile.high")
+
+out <- lapply(measures, function(measures)
+  dcast(all.uncertainties, Continent + Country ~ Approach, value.var = measures) %>%
+    .[, larger.uncertainties.efficiency:= ifelse(`GMs + uncertainty in irrigation efficiency` >
+                                                   `GMs + uncertainty in climate change`, "Yes", "No")] %>%
+    .[, .(N = .N), larger.uncertainties.efficiency])
+
+  out
+
+  # Check countries
+lapply(measures, function(measures)
+  dcast(all.uncertainties, Continent + Country ~ Approach, value.var = measures) %>%
+    .[, larger.uncertainties.efficiency:= ifelse(`GMs + uncertainty in irrigation efficiency` >
+                                                   `GMs + uncertainty in climate change`, "Yes", "No")] %>%
+  .[larger.uncertainties.efficiency == "No"])
+
+countries <- c("India", "Mexico", "Egypt", "Spain")
+all.uncertainties[Country %in% countries] %>%
+  .[order(Country)]
+
+# Plot differences in factors
+all.uncertainties %>%
   na.omit() %>%
-  # Calculate differencs in orders of magnitude
-  .[, order.magnitude:= log10(`GM + uncertainty in irrigation efficiency`) -
-      log10(`GM + uncertainty in climate change`)] %>%
-  .[order(-order.magnitude)]
-
-ggplot(dd, aes(order.magnitude)) +
-  geom_histogram() +
+  dcast(., Continent + Country ~ Approach, value.var = "quantile.high") %>%
+  .[, diff:= `GMs + uncertainty in irrigation efficiency` /
+      `GMs + uncertainty in climate change`] %>%
+  .[order(-diff)] %>%
+  na.omit() %>%
+  ggplot(., aes(diff)) +
+  geom_histogram() + 
   facet_wrap(~Continent) +
-  labs(x = "Order of magnitude", y = "Nº of countries") +
+  labs(x = "Factor", y = "Nº of countries") +
   theme_AP()
-
 ```
 
 # Sensitivity analysis
@@ -1158,7 +1182,7 @@ ggplot(dd, aes(order.magnitude)) +
 
 ```{r distributions, cache=TRUE, dependson="run_model", fig.height=3, fig.width=4, dev = "pdf"}
 
-# SAMPLE MATRIX DISTRIBUTIONS -----------------------------------------------------
+# SAMPLE MATRIX DISTRIBUTIONS ----------------------------------------------------
 
 mat <- data.table(full_sample_matrix(IFT = "Jager", Country = "Spain")$matrix)
 
@@ -1173,7 +1197,7 @@ melt(mat[, 1:8], measure.vars = colnames(mat)[-c(9,10)]) %>%
 
 ```{r extract_sobol, cache=TRUE, dependson=c("run_model", "extract_output")}
 
-# EXTRACT SOBOL' INDICES ----------------------------------------------------------
+# EXTRACT SOBOL' INDICES ---------------------------------------------------------
 
 ind <- lapply(y$`Rohwer et al. 2007`, function(x) x[["indices"]]$results)
 names(ind) <- rohwer$Country
@@ -1194,7 +1218,7 @@ for(i in names(tmp.ift)) {
 
 ```{r plot_sobol, cache=TRUE, dependson=c("extract_sobol"), fig.height=5, fig.width=2.5, dev = "pdf"}
 
-# PLOT SOBOL' INDICES -------------------------------------------------------------
+# PLOT SOBOL' INDICES ------------------------------------------------------------
 
 dt.indices <- rbindlist(out, idcol = "IFT") %>%
   .[!IFT == "Mixed"] %>%
@@ -1226,7 +1250,7 @@ rohwer.indices
 
 ```{r extract_jager_indices, cache=TRUE, dependson="extract_output", fig.height=8, fig.width=5.5, dev = "pdf"}
 
-# EXTRACT SOBOL' INDICES FOR JAGER ------------------------------------------------
+# EXTRACT SOBOL' INDICES FOR JAGER -----------------------------------------------
 
 jager.tmp <- lapply(y[["Jägermeyr et al. 2015"]], function(x) x$indices$results)
 names(jager.tmp) <- new.rohwer$Country
@@ -1267,7 +1291,7 @@ lapply(Continent_vector, function(x)
 
 ```{r jager_merged, cache=TRUE, dependson="extract_jager_indices", dev = "pdf"}
 
-# JAGER INDICES MERGED -----------------------------------------------------------
+# JAGER INDICES MERGED ----------------------------------------------------------
 
 jager.indices <- jager.ind %>%
   na.omit() %>%
@@ -1289,7 +1313,7 @@ jager.indices
 
 ```{r merge_indices, cache=TRUE, dependson=c("extract_jager_indices", "plot_sobol"), dev = "pdf", fig.height=3.2, fig.width=5.5}
 
-# MERGE INDICES ------------------------------------------------------------
+# MERGE INDICES ------------------------------------------------------------------
 
 bottom <- plot_grid(rohwer.indices, jager.indices, ncol = 2, 
                     rel_widths = c(0.3, 0.7), labels = "auto")
@@ -1306,7 +1330,7 @@ ggdraw(add_sub(final, "Sobol' indices", vpadding = grid::unit(0,"lines"),
 
 ```{r system}
 
-# SESSION INFORMATION ------------------------------------------------------------
+# SESSION INFORMATION -----------------------------------------------------------
 
 sessionInfo()
 
